# DiJiang

./: .gitignore  AGENTS.md  AGENTS.md.example  AGENTS.md.exmaple  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  coding-workflow.md  dijiang-trellis-analysis.md  results.tsv
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  util.rs
crates/cli/src/commands/: bench.rs  bucket.rs  channel.rs  commit.rs  context.rs  dispatch.rs  doc_sync.rs  finish.rs  init.rs  mem.rs  migrate.rs  mod.rs  session.rs  skills.rs  spec_sync.rs  start.rs  status.rs  task.rs  template.rs  update.rs  workflow.rs
crates/cli/tests/: e2e.rs
crates/configurator/: Cargo.toml
crates/configurator/src/: changelog.md  changelog.rs  claude.rs  codex.rs  cursor.rs  dj_skills.rs  hermes.rs  init.rs  lib.rs  opencode.rs  pi.rs  registry.rs  skills.rs  template_registry.rs  templates.rs  types.rs  update.rs
crates/configurator/templates/agents/: architect.md  checker.md  dijiang-architect.md  dijiang-check.md  dijiang-checker.md  dijiang-implement.md  dijiang-implementer.md  dijiang-planner.md  dijiang-research.md  dijiang-researcher.md  implementer.md  planner.md  researcher.md
crates/configurator/templates/benchmarks/scenarios/: minimal-change.yaml  yagni.yaml
crates/configurator/templates/config/: agents.md  workflow.md
crates/configurator/templates/extensions/dijiang/: index.ts
crates/configurator/templates/prompts/: dijiang-finish-work.md  dijiang-reason.md  dijiang-start.md
crates/configurator/templates/references/: agent-platform-adapters.md  anti-patterns.md  code-task-contract.md  decision-ladder.md  design-modes.md  durable-context-preflight.md  intensity-levels.md  model-invocation.md  outcome-contract.md  output-markers.md  read-pattern.md  reference-splitting.md  triage-pattern.md  version-management.md
crates/configurator/templates/scripts/: __init__.py  add_session.py  check-version.sh  dispatch.py  get_context.py  memory.py  safe_commit.py  skills.py  spec_sync.py  status.py  task.py  verify-index.sh  verify-references.sh  verify-skills.sh  verify-workflow.md  verify_skills.py  workflow_state.py
crates/configurator/templates/scripts/common/: __init__.py  config.py  context.py  git.py  io.py  memory.py  paths.py  session.py  spec_sync.py  tasks.py  types.py  workflow_templates.py
crates/configurator/templates/skills/: SKILL.md
crates/configurator/templates/skills/dijiang-continue/: SKILL.md
crates/configurator/templates/skills/dijiang-finish-work/: SKILL.md
crates/configurator/templates/skills/dijiang-start/: SKILL.md
crates/configurator/templates/skills/dj-absorb/: SKILL.md
crates/configurator/templates/skills/dj-ask/: SKILL.md
crates/configurator/templates/skills/dj-audit/: SKILL.md
crates/configurator/templates/skills/dj-channel/: SKILL.md
crates/configurator/templates/skills/dj-check/: SKILL.md
crates/configurator/templates/skills/dj-codebase-design/: SKILL.md
crates/configurator/templates/skills/dj-debt/: SKILL.md
crates/configurator/templates/skills/dj-design/: SKILL.md
crates/configurator/templates/skills/dj-dispatch/: SKILL.md
crates/configurator/templates/skills/dj-domain-modeling/: SKILL.md
crates/configurator/templates/skills/dj-git-guardrails/: SKILL.md
crates/configurator/templates/skills/dj-gov/: SKILL.md
crates/configurator/templates/skills/dj-grill/: SKILL.md
crates/configurator/templates/skills/dj-handoff/: SKILL.md
crates/configurator/templates/skills/dj-health/: SKILL.md
crates/configurator/templates/skills/dj-hunt/: SKILL.md
crates/configurator/templates/skills/dj-implement/: SKILL.md
crates/configurator/templates/skills/dj-karpathy/: SKILL.md
crates/configurator/templates/skills/dj-meta/: SKILL.md
crates/configurator/templates/skills/dj-output/: SKILL.md
crates/configurator/templates/skills/dj-pattern/: SKILL.md
crates/configurator/templates/skills/dj-ponytail/: SKILL.md
crates/configurator/templates/skills/dj-prd/: SKILL.md
crates/configurator/templates/skills/dj-prototype/: SKILL.md
crates/configurator/templates/skills/dj-reason/: SKILL.md
crates/configurator/templates/skills/dj-remix/: SKILL.md
crates/configurator/templates/skills/dj-research/: SKILL.md
crates/configurator/templates/skills/dj-review/: SKILL.md
crates/configurator/templates/skills/dj-script/: SKILL.md
crates/configurator/templates/skills/dj-session-insight/: SKILL.md
crates/configurator/templates/skills/dj-spec-bootstrap/: SKILL.md
crates/configurator/templates/skills/dj-split/: SKILL.md
crates/configurator/templates/skills/dj-tdd/: SKILL.md
crates/configurator/templates/skills/dj-write/: SKILL.md
crates/configurator/templates/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
crates/configurator/templates/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
crates/configurator/templates/spec/guides/: code-reuse-thinking-guide.md  cross-layer-thinking-guide.md  index.md  memory-lifecycle-guide.md  tool-preferences.md  verification-loop-guide.md
crates/configurator/templates/spec/meta/: adr.md  changelog.md  contributing.md  index.md  memory-architecture.md  (+2 more)
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: handlers.rs  lib.rs  protocol.rs
crates/mem/: Cargo.toml
crates/mem/src/: adapter.rs  claude.rs  codex.rs  hermes.rs  jsonl.rs  lib.rs  memory.rs  opencode.rs  pi.rs  registry.rs  store.rs  types.rs
crates/mem/tests/: deser_test.rs
crates/task/: Cargo.toml  build.rs
crates/task/src/: agent_manifest.rs  capability_gate.rs  circuit_breaker.rs  config.rs  context.rs  developer.rs  git_gate.rs  hooks.rs  lib.rs  route_gate.rs  skill_manifest.rs  spec_sync.rs  store.rs  types.rs  workflow_state.rs
crates/task/src/benchmarks/: mod.rs
crates/task/src/buckets/: mod.rs
crates/task/src/doc_sync/: analyzer.rs  mapper.rs  mod.rs
crates/task/src/workflow_state/: mod.rs  tag_parser.rs  types.rs
(+197 files in other folders)
