[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/task",
    "crates/mem",
    "crates/configurator",
    "crates/mcp-server",
]
[workspace.package]
version = "0.13.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
rust-embed = "8"
dialoguer = "0.11"
indicatif = "0.17"
tempfile = "3"
serde_yaml = "0.9"
regex = "1"
toml = "0.8"
