[package]
name = "dijiang"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
dijiang-task = { path = "../task" }
dijiang-mem = { path = "../mem" }
dijiang-configurator = { path = "../configurator" }
dialoguer = { workspace = true }
sha2 = "0.10"
dirs = "5"
[dev-dependencies]
tempfile = "3"
