[package]
name = "dijiang"
version = "0.6.3"
edition = "2024"

[dependencies]
dijiang-mem = { path = "../mem" }
dijiang-task = { path = "../task" }
dijiang-configurator = { path = "../configurator" }
dijiang-mcp = { path = "../mcp-server" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
dialoguer = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
