[package]
name = "dijiang"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
dijiang-mem = { path = "../mem" }
dijiang-task = { path = "../task" }
dijiang-configurator = { path = "../configurator" }
dijiang-mcp = { path = "../mcp-server" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
dialoguer = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
