[package]
name = "dijiang-configurator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
rust-embed = { workspace = true, features = ["include-exclude"] }
ureq = "2.12"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
