[package]
name = "dijiang-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
dijiang-task = { path = "../task" }
dijiang-mem = { path = "../mem" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
