[package]
name = "dijiang-mem"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
chrono = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
futures = "0.3"
