[package]
name = "dijiang-task"
version = "0.6.3"
edition = "2024"

[dependencies]
dijiang-mem = { path = "../mem" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
