[package]
name = "dijiang-task"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
dijiang-mem = { path = "../mem" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
